Fix unresponsive font sizes Several headings were too big on smaller screens. Added clamp() to these to make them responsive, and separated some class names to ensure styles were not colliding  # Please enter the commit message for your changes. Lines starting

--- a/src/assets/styles/contact.css
+++ b/src/assets/styles/contact.css
@@ -10,12 +10,13 @@
   padding: 12em 0;
 }
 
-.left-col > .section-heading {
+.left-col > .contact-section-heading {
+  font-size: 3rem;
   line-height: 2.5rem;
   margin-bottom: 1em;
   text-align: left;
 }
 
-.left-col > .description {
+.left-col > .address {
   line-height: 2rem;
 }
