--- a/src/assets/styles/hero.css
+++ b/src/assets/styles/hero.css
@@ -13,27 +13,37 @@ body {
   letter-spacing: 1px;
 }
 
-.hero {
+#hero {
+  align-items: center;
   background: url('../images/hero-image.jpg');
   background-position: bottom center;
   background-repeat: no-repeat;
   background-size: cover;
-  color: #fff;
-  min-height: 100vh;
-  position: relative;
-}
-
-.background-overlay {
-  align-items: center;
-  background-color: rgba(61, 70, 77, 0.75);
   display: flex;
   flex-direction: column;
   height: 100vh;
   justify-content: center;
-  left: 0;
+}
+
+#hero::before {
+  background-color: rgba(61, 70, 77, 0.75);
   position: absolute;
+  content: '';
   top: 0;
+  left: 0;
+  height: 100%;
   width: 100%;
+}
+
+.hero {
+  align-items: center;
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: center;
+  width: 90%;
+  position: relative;
 }
 
 .logo {
@@ -41,18 +51,18 @@ body {
   left: 3em;
   position: absolute;
   top: 3em;
-  width: 6em;
+  width: min(6%, 6em);
 }
 
 .subheading {
-  font-size: 1.8rem;
-  font-weight: 100;
+  font-size: clamp(1rem, 1vw, 1.8rem);
+  font-weight: 200;
   text-align: center;
   text-transform: uppercase;
 }
 
 .heading {
-  font-size: 6rem;
+  font-size: clamp(3rem, 4vw, 6rem);
   text-align: center;
   margin-bottom: 3rem;
 }
@@ -61,8 +71,9 @@ body {
   background-color: #f8ad3a;
   color: #3d464d;
   cursor: pointer;
+  font-size: clamp(0.9rem, 0.7vw, 3rem);
   font-weight: 700;
-  padding: 1rem 2rem;
+  padding: 1em 2em;
   text-transform: uppercase;
   transition: all 0.3s;
 }
@@ -77,7 +88,7 @@ body {
   filter: invert(70%) sepia(60%) saturate(0%) hue-rotate(318deg) brightness(105%) contrast(98%);
   left: 50;
   position: absolute;
-  width: 6em;
+  width: 4%;
 }
 
 @keyframes invisible {
