--- a/src/assets/styles/home.css
+++ b/src/assets/styles/home.css
@@ -13,8 +13,8 @@
 }
 
 .left-col > .section-heading {
-  line-height: 2.5rem;
-  margin-bottom: 1em;
+  font-size: 2rem;
+  line-height: 1.25em;
 }
 
 .left-col > .description {
