--- a/src/assets/styles/menu.css
+++ b/src/assets/styles/menu.css
@@ -6,7 +6,7 @@
   padding: 2em 0;
 }
 
-.section-heading {
+.menu-section-heading {
   font-size: 3rem;
   margin-bottom: 2em;
   text-align: center;
